Fix a crash when adding a reference image

Reference images layer does not have any paint device.

BUG:461556